[gd_scene load_steps=21 format=2]

[ext_resource path="res://graphics/button.png" type="Texture" id=1]
[ext_resource path="res://sounds/click.wav" type="AudioStream" id=2]
[ext_resource path="res://scripts/score_displayer.gd" type="Script" id=3]
[ext_resource path="res://sounds/record_100.wav" type="AudioStream" id=4]
[ext_resource path="res://graphics/doge.png" type="Texture" id=5]
[ext_resource path="res://graphics/pepe.png" type="Texture" id=6]
[ext_resource path="res://sounds/record_250.wav" type="AudioStream" id=7]
[ext_resource path="res://graphics/nyan_cat.webm" type="VideoStream" id=8]
[ext_resource path="res://graphics/videoplayback.webm" type="VideoStream" id=9]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFontData" id=6]
antialiased = false
font_path = "res://graphics/digiffiti.ttf"

[sub_resource type="DynamicFont" id=7]
size = 18
use_mipmaps = true
font_data = SubResource( 6 )

[sub_resource type="DynamicFontData" id=8]
antialiased = false
font_path = "res://graphics/digiffiti.ttf"

[sub_resource type="DynamicFont" id=9]
size = 64
font_data = SubResource( 8 )

[sub_resource type="Animation" id=10]
resource_name = "doge_unfold"
tracks/0/type = "value"
tracks/0/path = NodePath("sprites/doge:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1256, 1104 ), Vector2( 1256, 704 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "pepe_unfold"
tracks/0/type = "value"
tracks/0/path = NodePath("sprites/pepe:position")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 184, -184 ), Vector2( 184, 184 ) ]
}

[node name="Node2D" type="Node2D"]

[node name="base_clicker" type="Button" parent="."]
margin_left = 672.0
margin_top = 352.0
margin_right = 684.0
margin_bottom = 372.0
rect_scale = Vector2( 21.1352, 6.34007 )
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="base_clicker"]
position = Vector2( 6.01354, 10.0233 )
scale = Vector2( 0.75785, 2.55296 )
texture = ExtResource( 1 )

[node name="button_click_audio" type="AudioStreamPlayer" parent="base_clicker"]
stream = ExtResource( 2 )
volume_db = -10.0

[node name="score_label" type="Label" parent="."]
margin_top = 272.0
margin_right = 252.0
margin_bottom = 286.0
rect_scale = Vector2( 6.36014, 5.04359 )
custom_fonts/font = SubResource( 7 )
text = "123"
align = 1
uppercase = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="about" type="Label" parent="."]
margin_left = 8.0
margin_top = 856.0
margin_right = 1180.0
margin_bottom = 900.0
rect_scale = Vector2( 0.775735, 0.808046 )
custom_fonts/font = SubResource( 9 )
text = "MoniClicker 2 |  made for niezesrajsie.tk"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="audio_records" type="Node" parent="."]

[node name="record_100" type="AudioStreamPlayer" parent="audio_records"]
stream = ExtResource( 4 )

[node name="record_250" type="AudioStreamPlayer" parent="audio_records"]
stream = ExtResource( 7 )

[node name="sprites" type="Node" parent="."]

[node name="animation" type="AnimationPlayer" parent="sprites"]
root_node = NodePath("../..")
anims/doge_unfold = SubResource( 10 )
anims/pepe_unfold = SubResource( 11 )

[node name="nyan_cat" type="VideoPlayer" parent="sprites"]
margin_left = 1056.0
margin_top = 8.0
margin_right = 1096.0
margin_bottom = 48.0
rect_scale = Vector2( 2.45183, 2.54604 )
stream = ExtResource( 8 )
expand = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dollar_card" type="VideoPlayer" parent="sprites"]
margin_left = 48.0
margin_top = 40.0
margin_right = 368.0
margin_bottom = 280.0
rect_scale = Vector2( 1.54085, 3.15011 )
stream = ExtResource( 9 )
expand = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="doge" type="Sprite" parent="sprites"]
position = Vector2( 1256, 1104 )
texture = ExtResource( 5 )
flip_h = true

[node name="pepe" type="Sprite" parent="sprites"]
position = Vector2( 184, -192 )
texture = ExtResource( 6 )
[connection signal="pressed" from="base_clicker" to="score_label" method="_on_Button_pressed"]
[connection signal="animation_finished" from="sprites/animation" to="score_label" method="_on_animation_animation_finished"]
[connection signal="finished" from="sprites/dollar_card" to="score_label" method="_on_dollar_card_finished"]
